@@ -6,5 +6,7 @@ includedir=@includedir@
 Name: libqalculate
 Description: libqalculate
 Version: @VERSION@
+Libs.private: @LIBCURL_LIBS@ @ICU_LIBS@ @LTLIBINTL@ @LTLIBICONV@ -lmpfr -lgmp -lpthread
+Required.private: libxml-2.0 >= 2.3.8
 Libs: -L${libdir} -lqalculate
-Cflags: -I${includedir}
+Cflags: @LIBCURL_CFLAGS@ @ICU_CFLAGS@ -I${includedir}
