@@ -616,6 +616,9 @@ Calculator::~Calculator() {
 #endif
 }
 
+string Calculator::logicalORString(void) const {return _("or");}
+string Calculator::logicalANDString(void) const {return _("and");}
+
 Unit *Calculator::getGraUnit() {
 	if(!u_gra) u_gra = getUnit("gra");
 	if(!u_gra) {
@@ -1863,209 +1866,6 @@ void Calculator::deleteUnitName(string name_, Unit *object) {
 		}
 	}
 	deleteUnitName(name_, object);
-}
-
-string Calculator::localizeExpression(string str, const ParseOptions &po) const {
-	if((DOT_STR == DOT && COMMA_STR == COMMA && !po.comma_as_separator) || po.base == BASE_UNICODE || (po.base == BASE_CUSTOM && priv->custom_input_base_i > 62)) return str;
-	vector<size_t> q_begin;
-	vector<size_t> q_end;
-	size_t i3 = 0;
-	while(true) {
-		i3 = str.find_first_of("\"\'", i3);
-		if(i3 == string::npos) {
-			break;
-		}
-		q_begin.push_back(i3);
-		i3 = str.find(str[i3], i3 + 1);
-		if(i3 == string::npos) {
-			q_end.push_back(str.length() - 1);
-			break;
-		}
-		q_end.push_back(i3);
-		i3++;
-	}
-	if(COMMA_STR != COMMA || po.comma_as_separator) {
-		bool b_alt_comma = po.comma_as_separator && COMMA_STR == COMMA;
-		size_t ui = str.find(COMMA);
-		while(ui != string::npos) {
-			bool b = false;
-			for(size_t ui2 = 0; ui2 < q_end.size(); ui2++) {
-				if(ui <= q_end[ui2] && ui >= q_begin[ui2]) {
-					ui = str.find(COMMA, q_end[ui2] + 1);
-					b = true;
-					break;
-				}
-			}
-			if(!b) {
-				str.replace(ui, strlen(COMMA), b_alt_comma ? ";" : COMMA_STR);
-				ui = str.find(COMMA, ui + (b_alt_comma ? 1 : COMMA_STR.length()));
-			}
-		}
-	}
-	if(DOT_STR != DOT) {
-		size_t ui = str.find(DOT);
-		while(ui != string::npos) {
-			bool b = false;
-			for(size_t ui2 = 0; ui2 < q_end.size(); ui2++) {
-				if(ui <= q_end[ui2] && ui >= q_begin[ui2]) {
-					ui = str.find(DOT, q_end[ui2] + 1);
-					b = true;
-					break;
-				}
-			}
-			if(!b) {
-				str.replace(ui, strlen(DOT), DOT_STR);
-				ui = str.find(DOT, ui + DOT_STR.length());
-			}
-		}
-	}
-	return str;
-}
-string Calculator::unlocalizeExpression(string str, const ParseOptions &po) const {
-	if((DOT_STR == DOT && COMMA_STR == COMMA && !po.comma_as_separator) || po.base == BASE_UNICODE || (po.base == BASE_CUSTOM && priv->custom_input_base_i > 62)) return str;
-	int base = po.base;
-	if(base == BASE_CUSTOM) {
-		base = (int) priv->custom_input_base_i;
-	} else if(base == BASE_BIJECTIVE_26) {
-		base = 36;
-	} else if(base == BASE_GOLDEN_RATIO || base == BASE_SUPER_GOLDEN_RATIO || base == BASE_SQRT2) {
-		base = 2;
-	} else if(base == BASE_PI) {
-		base = 4;
-	} else if(base == BASE_E) {
-		base = 3;
-	} else if(base == BASE_DUODECIMAL) {
-		base = -12;
-	} else if(base < 2 || base > 36) {
-		base = -1;
-	}
-	vector<size_t> q_begin;
-	vector<size_t> q_end;
-	size_t i3 = 0;
-	while(true) {
-		i3 = str.find_first_of("\"\'", i3);
-		if(i3 == string::npos) {
-			break;
-		}
-		q_begin.push_back(i3);
-		i3 = str.find(str[i3], i3 + 1);
-		if(i3 == string::npos) {
-			q_end.push_back(str.length() - 1);
-			break;
-		}
-		q_end.push_back(i3);
-		i3++;
-	}
-	if(DOT_STR != DOT) {
-		if(DOT_STR == COMMA && str.find(COMMA_STR) == string::npos && base > 0 && base <= 10) {
-			bool b_vector = (str.find(LEFT_VECTOR_WRAP) != string::npos && !po.dot_as_separator);
-			bool b_dot = (str.find(DOT) != string::npos);
-			size_t ui = str.find_first_of(b_vector ? DOT COMMA : COMMA);
-			size_t ui2 = 0;
-			while(ui != string::npos) {
-				for(; ui2 < q_end.size(); ui2++) {
-					if(ui >= q_begin[ui2]) {
-						if(ui <= q_end[ui2]) {
-							ui = str.find_first_of(b_vector ? DOT COMMA : COMMA, q_end[ui2] + 1);
-							if(ui == string::npos) break;
-						}
-					} else {
-						break;
-					}
-				}
-				if(ui == string::npos) break;
-				if(ui > 0) {
-					size_t ui3 = str.find_last_not_of(SPACES, ui - 1);
-					if(ui3 != string::npos && ((str[ui3] > 'a' && str[ui3] < 'z') || (str[ui3] > 'A' && str[ui3] < 'Z')) && is_not_number(str[ui3], base)) return str;
-				}
-				if(ui != str.length() - 1) {
-					size_t ui3 = str.find_first_not_of(SPACES, ui + 1);
-					if(ui3 != string::npos && is_not_number(str[ui3], base)) return str;
-					if(b_vector || !b_dot) {
-						ui3 = str.find_first_not_of(SPACES NUMBERS, ui3 + 1);
-						if(ui3 != string::npos && (str[ui3] == COMMA_CH || (b_vector && str[ui3] == DOT_CH))) return str;
-					}
-				}
-				ui = str.find(b_vector ? DOT COMMA : COMMA, ui + 1);
-			}
-		}
-		if(po.dot_as_separator) {
-			size_t ui = str.find(DOT);
-			size_t ui2 = 0;
-			while(ui != string::npos) {
-				for(; ui2 < q_end.size(); ui2++) {
-					if(ui >= q_begin[ui2]) {
-						if(ui <= q_end[ui2]) {
-							ui = str.find(DOT, q_end[ui2] + 1);
-							if(ui == string::npos) break;
-						}
-					} else {
-						break;
-					}
-				}
-				if(ui == string::npos) break;
-				str.replace(ui, strlen(DOT), SPACE);
-				ui = str.find(DOT, ui + strlen(SPACE));
-			}
-		}
-		size_t ui2 = 0;
-		size_t ui = str.find(DOT_STR);
-		while(ui != string::npos) {
-			for(; ui2 < q_end.size(); ui2++) {
-				if(ui >= q_begin[ui2]) {
-					if(ui <= q_end[ui2]) {
-						ui = str.find(DOT_STR, q_end[ui2] + 1);
-						if(ui == string::npos) break;
-					}
-				} else {
-					break;
-				}
-			}
-			if(ui == string::npos) break;
-			str.replace(ui, DOT_STR.length(), DOT);
-			ui = str.find(DOT_STR, ui + strlen(DOT));
-		}
-	}
-	if(COMMA_STR != COMMA || po.comma_as_separator) {
-		bool b_alt_comma = po.comma_as_separator && COMMA_STR == COMMA;
-		if(po.comma_as_separator) {
-			size_t ui = str.find(COMMA);
-			size_t ui2 = 0;
-			while(ui != string::npos) {
-				for(; ui2 < q_end.size(); ui2++) {
-					if(ui >= q_begin[ui2]) {
-						if(ui <= q_end[ui2]) {
-							ui = str.find(COMMA, q_end[ui2] + 1);
-							if(ui == string::npos) break;
-						}
-					} else {
-						break;
-					}
-				}
-				if(ui == string::npos) break;
-				str.erase(ui, strlen(COMMA));
-				ui = str.find(COMMA, ui);
-			}
-		}
-		size_t ui2 = 0;
-		size_t ui = str.find(b_alt_comma ? ";" : COMMA_STR);
-		while(ui != string::npos) {
-			for(; ui2 < q_end.size(); ui2++) {
-				if(ui >= q_begin[ui2]) {
-					if(ui <= q_end[ui2]) {
-						ui = str.find(b_alt_comma ? ";" : COMMA_STR, q_end[ui2] + 1);
-						if(ui == string::npos) break;
-					}
-				} else {
-					break;
-				}
-			}
-			if(ui == string::npos) break;
-			str.replace(ui, b_alt_comma ? 1 : COMMA_STR.length(), COMMA);
-			ui = str.find(b_alt_comma ? ";" : COMMA_STR, ui + strlen(COMMA));
-		}
-	}
-	return str;
 }
 
 Unit* Calculator::addUnit(Unit *u, bool force, bool check_names) {
