@@ -1,3 +1,7 @@
+2021-07-07 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix segfault after failure to convert approximate unit (cal_fifteen and cal_th)
+
 2021-07-04 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Add support for "a perm b" (= perm(a,b)), "a comb b" (= comb(a,b)), "a dot b" (= "a.b"), "a cross b" (= cross(a,b)), and Unicode cross product symbol
